src/gdbParser.js
// Generated from gdb.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var gdbListener = require('./gdbListener').gdbListener;
var gdbVisitor = require('./gdbVisitor').gdbVisitor;

var grammarFileName = "gdb.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'{'", "'}'", "'('", "')'", "','", "';'", "'.'", 
                     "'['", "']'", "':'", "'write'", "'onDebugOutput'", 
                     "'onAppOutput'", "'onExecStateChange'", "'debug'", 
                     "'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'not'", "'and'", 
                     "'or'", "'null'", "'if'", "'elsif'", "'else'", "'while'", 
                     "'for'", "'in'", "'function'", "'this'", "'return'", 
                     "'true'", "'false'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "ASSIGN", 
                      "EQUAL", "NOT_EQUAL", "LT", "LE", "GT", "GE", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "NULL", "IF", "ELSIF", "ELSE", "WHILE", "FOR", "IN", 
                      "FUNC", "THIS", "RETURN", "TRUE", "FALSE", "ID", "INT", 
                      "COMMENT", "STRING", "WS" ];

var ruleNames =  [ "prog", "progChunk", "func", "params", "paramList", "blockInstructions", 
                   "instruction", "ifElse", "expr", "andExpr", "cmpExpr", 
                   "sumExpr", "sumOp", "prodExpr", "prodOp", "unit", "access", 
                   "subAccess", "atom", "exprList", "objectProp", "funCall" ];

function gdbParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

gdbParser.prototype = Object.create(antlr4.Parser.prototype);
gdbParser.prototype.constructor = gdbParser;

Object.defineProperty(gdbParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

gdbParser.EOF = antlr4.Token.EOF;
gdbParser.T__0 = 1;
gdbParser.T__1 = 2;
gdbParser.T__2 = 3;
gdbParser.T__3 = 4;
gdbParser.T__4 = 5;
gdbParser.T__5 = 6;
gdbParser.T__6 = 7;
gdbParser.T__7 = 8;
gdbParser.T__8 = 9;
gdbParser.T__9 = 10;
gdbParser.T__10 = 11;
gdbParser.T__11 = 12;
gdbParser.T__12 = 13;
gdbParser.T__13 = 14;
gdbParser.T__14 = 15;
gdbParser.ASSIGN = 16;
gdbParser.EQUAL = 17;
gdbParser.NOT_EQUAL = 18;
gdbParser.LT = 19;
gdbParser.LE = 20;
gdbParser.GT = 21;
gdbParser.GE = 22;
gdbParser.PLUS = 23;
gdbParser.MINUS = 24;
gdbParser.MUL = 25;
gdbParser.DIV = 26;
gdbParser.MOD = 27;
gdbParser.NOT = 28;
gdbParser.AND = 29;
gdbParser.OR = 30;
gdbParser.NULL = 31;
gdbParser.IF = 32;
gdbParser.ELSIF = 33;
gdbParser.ELSE = 34;
gdbParser.WHILE = 35;
gdbParser.FOR = 36;
gdbParser.IN = 37;
gdbParser.FUNC = 38;
gdbParser.THIS = 39;
gdbParser.RETURN = 40;
gdbParser.TRUE = 41;
gdbParser.FALSE = 42;
gdbParser.ID = 43;
gdbParser.INT = 44;
gdbParser.COMMENT = 45;
gdbParser.STRING = 46;
gdbParser.WS = 47;

gdbParser.RULE_prog = 0;
gdbParser.RULE_progChunk = 1;
gdbParser.RULE_func = 2;
gdbParser.RULE_params = 3;
gdbParser.RULE_paramList = 4;
gdbParser.RULE_blockInstructions = 5;
gdbParser.RULE_instruction = 6;
gdbParser.RULE_ifElse = 7;
gdbParser.RULE_expr = 8;
gdbParser.RULE_andExpr = 9;
gdbParser.RULE_cmpExpr = 10;
gdbParser.RULE_sumExpr = 11;
gdbParser.RULE_sumOp = 12;
gdbParser.RULE_prodExpr = 13;
gdbParser.RULE_prodOp = 14;
gdbParser.RULE_unit = 15;
gdbParser.RULE_access = 16;
gdbParser.RULE_subAccess = 17;
gdbParser.RULE_atom = 18;
gdbParser.RULE_exprList = 19;
gdbParser.RULE_objectProp = 20;
gdbParser.RULE_funCall = 21;

function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.EOF = function() {
    return this.getToken(gdbParser.EOF, 0);
};

ProgContext.prototype.progChunk = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ProgChunkContext);
    } else {
        return this.getTypedRuleContext(ProgChunkContext,i);
    }
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitProg(this);
	}
};

ProgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitProg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




gdbParser.ProgContext = ProgContext;

gdbParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, gdbParser.RULE_prog);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 45; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 44;
            this.progChunk();
            this.state = 47; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << gdbParser.T__5) | (1 << gdbParser.T__10) | (1 << gdbParser.T__11) | (1 << gdbParser.T__12) | (1 << gdbParser.T__13) | (1 << gdbParser.T__14))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (gdbParser.IF - 32)) | (1 << (gdbParser.WHILE - 32)) | (1 << (gdbParser.FOR - 32)) | (1 << (gdbParser.FUNC - 32)) | (1 << (gdbParser.RETURN - 32)) | (1 << (gdbParser.ID - 32)))) !== 0));
        this.state = 49;
        this.match(gdbParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ProgChunkContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_progChunk;
    return this;
}

ProgChunkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgChunkContext.prototype.constructor = ProgChunkContext;


 
ProgChunkContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ProgFuncContext(parser, ctx) {
	ProgChunkContext.call(this, parser);
    ProgChunkContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ProgFuncContext.prototype = Object.create(ProgChunkContext.prototype);
ProgFuncContext.prototype.constructor = ProgFuncContext;

gdbParser.ProgFuncContext = ProgFuncContext;

ProgFuncContext.prototype.func = function() {
    return this.getTypedRuleContext(FuncContext,0);
};
ProgFuncContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterProgFunc(this);
	}
};

ProgFuncContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitProgFunc(this);
	}
};

ProgFuncContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitProgFunc(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ProgInstrContext(parser, ctx) {
	ProgChunkContext.call(this, parser);
    ProgChunkContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ProgInstrContext.prototype = Object.create(ProgChunkContext.prototype);
ProgInstrContext.prototype.constructor = ProgInstrContext;

gdbParser.ProgInstrContext = ProgInstrContext;

ProgInstrContext.prototype.blockInstructions = function() {
    return this.getTypedRuleContext(BlockInstructionsContext,0);
};
ProgInstrContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterProgInstr(this);
	}
};

ProgInstrContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitProgInstr(this);
	}
};

ProgInstrContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitProgInstr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



gdbParser.ProgChunkContext = ProgChunkContext;

gdbParser.prototype.progChunk = function() {

    var localctx = new ProgChunkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, gdbParser.RULE_progChunk);
    try {
        this.state = 53;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            localctx = new ProgFuncContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 51;
            this.func();
            break;

        case 2:
            localctx = new ProgInstrContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 52;
            this.blockInstructions();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FuncContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_func;
    return this;
}

FuncContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FuncContext.prototype.constructor = FuncContext;

FuncContext.prototype.FUNC = function() {
    return this.getToken(gdbParser.FUNC, 0);
};

FuncContext.prototype.ID = function() {
    return this.getToken(gdbParser.ID, 0);
};

FuncContext.prototype.params = function() {
    return this.getTypedRuleContext(ParamsContext,0);
};

FuncContext.prototype.blockInstructions = function() {
    return this.getTypedRuleContext(BlockInstructionsContext,0);
};

FuncContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterFunc(this);
	}
};

FuncContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitFunc(this);
	}
};

FuncContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitFunc(this);
    } else {
        return visitor.visitChildren(this);
    }
};




gdbParser.FuncContext = FuncContext;

gdbParser.prototype.func = function() {

    var localctx = new FuncContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, gdbParser.RULE_func);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.match(gdbParser.FUNC);
        this.state = 56;
        this.match(gdbParser.ID);
        this.state = 57;
        this.params();
        this.state = 58;
        this.match(gdbParser.T__0);
        this.state = 59;
        this.blockInstructions();
        this.state = 60;
        this.match(gdbParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParamsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_params;
    return this;
}

ParamsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParamsContext.prototype.constructor = ParamsContext;

ParamsContext.prototype.paramList = function() {
    return this.getTypedRuleContext(ParamListContext,0);
};

ParamsContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterParams(this);
	}
};

ParamsContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitParams(this);
	}
};

ParamsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitParams(this);
    } else {
        return visitor.visitChildren(this);
    }
};




gdbParser.ParamsContext = ParamsContext;

gdbParser.prototype.params = function() {

    var localctx = new ParamsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, gdbParser.RULE_params);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.match(gdbParser.T__2);
        this.state = 64;
        _la = this._input.LA(1);
        if(_la===gdbParser.ID) {
            this.state = 63;
            this.paramList();
        }

        this.state = 66;
        this.match(gdbParser.T__3);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParamListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_paramList;
    return this;
}

ParamListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParamListContext.prototype.constructor = ParamListContext;

ParamListContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(gdbParser.ID);
    } else {
        return this.getToken(gdbParser.ID, i);
    }
};


ParamListContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterParamList(this);
	}
};

ParamListContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitParamList(this);
	}
};

ParamListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitParamList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




gdbParser.ParamListContext = ParamListContext;

gdbParser.prototype.paramList = function() {

    var localctx = new ParamListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, gdbParser.RULE_paramList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        this.match(gdbParser.ID);
        this.state = 73;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===gdbParser.T__4) {
            this.state = 69;
            this.match(gdbParser.T__4);
            this.state = 70;
            this.match(gdbParser.ID);
            this.state = 75;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockInstructionsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_blockInstructions;
    return this;
}

BlockInstructionsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockInstructionsContext.prototype.constructor = BlockInstructionsContext;

BlockInstructionsContext.prototype.instruction = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InstructionContext);
    } else {
        return this.getTypedRuleContext(InstructionContext,i);
    }
};

BlockInstructionsContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterBlockInstructions(this);
	}
};

BlockInstructionsContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitBlockInstructions(this);
	}
};

BlockInstructionsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitBlockInstructions(this);
    } else {
        return visitor.visitChildren(this);
    }
};




gdbParser.BlockInstructionsContext = BlockInstructionsContext;

gdbParser.prototype.blockInstructions = function() {

    var localctx = new BlockInstructionsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, gdbParser.RULE_blockInstructions);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 77; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 76;
        		this.instruction();
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 79; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,4, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = gdbParser.RULE_instruction;
    return this;
}

InstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionContext.prototype.constructor = InstructionContext;


 
InstructionContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function AssignInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AssignInstructionContext.prototype = Object.create(InstructionContext.prototype);
AssignInstructionContext.prototype.constructor = AssignInstructionContext;

gdbParser.AssignInstructionContext = AssignInstructionContext;

AssignInstructionContext.prototype.ID = function() {
    return this.getToken(gdbParser.ID, 0);
};

AssignInstructionContext.prototype.ASSIGN = function() {
    return this.getToken(gdbParser.ASSIGN, 0);
};

AssignInstructionContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
AssignInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterAssignInstruction(this);
	}
};

AssignInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitAssignInstruction(this);
	}
};

AssignInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitAssignInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IfElseInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IfElseInstructionContext.prototype = Object.create(InstructionContext.prototype);
IfElseInstructionContext.prototype.constructor = IfElseInstructionContext;

gdbParser.IfElseInstructionContext = IfElseInstructionContext;

IfElseInstructionContext.prototype.ifElse = function() {
    return this.getTypedRuleContext(IfElseContext,0);
};
IfElseInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterIfElseInstruction(this);
	}
};

IfElseInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitIfElseInstruction(this);
	}
};

IfElseInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitIfElseInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function WhileLoopInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

WhileLoopInstructionContext.prototype = Object.create(InstructionContext.prototype);
WhileLoopInstructionContext.prototype.constructor = WhileLoopInstructionContext;

gdbParser.WhileLoopInstructionContext = WhileLoopInstructionContext;

WhileLoopInstructionContext.prototype.WHILE = function() {
    return this.getToken(gdbParser.WHILE, 0);
};

WhileLoopInstructionContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

WhileLoopInstructionContext.prototype.blockInstructions = function() {
    return this.getTypedRuleContext(BlockInstructionsContext,0);
};
WhileLoopInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterWhileLoopInstruction(this);
	}
};

WhileLoopInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitWhileLoopInstruction(this);
	}
};

WhileLoopInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitWhileLoopInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function FunCallInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FunCallInstructionContext.prototype = Object.create(InstructionContext.prototype);
FunCallInstructionContext.prototype.constructor = FunCallInstructionContext;

gdbParser.FunCallInstructionContext = FunCallInstructionContext;

FunCallInstructionContext.prototype.funCall = function() {
    return this.getTypedRuleContext(FunCallContext,0);
};
FunCallInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterFunCallInstruction(this);
	}
};

FunCallInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitFunCallInstruction(this);
	}
};

FunCallInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitFunCallInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function RetCallInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

RetCallInstructionContext.prototype = Object.create(InstructionContext.prototype);
RetCallInstructionContext.prototype.constructor = RetCallInstructionContext;

gdbParser.RetCallInstructionContext = RetCallInstructionContext;

RetCallInstructionContext.prototype.RETURN = function() {
    return this.getToken(gdbParser.RETURN, 0);
};

RetCallInstructionContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
RetCallInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterRetCallInstruction(this);
	}
};

RetCallInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitRetCallInstruction(this);
	}
};

RetCallInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitRetCallInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NoInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NoInstructionContext.prototype = Object.create(InstructionContext.prototype);
NoInstructionContext.prototype.constructor = NoInstructionContext;

gdbParser.NoInstructionContext = NoInstructionContext;

NoInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterNoInstruction(this);
	}
};

NoInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitNoInstruction(this);
	}
};

NoInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitNoInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ForLoopInstructionContext(parser, ctx) {
	InstructionContext.call(this, parser);
    InstructionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ForLoopInstructionContext.prototype = Object.create(InstructionContext.prototype);
ForLoopInstructionContext.prototype.constructor = ForLoopInstructionContext;

gdbParser.ForLoopInstructionContext = ForLoopInstructionContext;

ForLoopInstructionContext.prototype.FOR = function() {
    return this.getToken(gdbParser.FOR, 0);
};

ForLoopInstructionContext.prototype.ID = function() {
    return this.getToken(gdbParser.ID, 0);
};

ForLoopInstructionContext.prototype.IN = function() {
    return this.getToken(gdbParser.IN, 0);
};

ForLoopInstructionContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ForLoopInstructionContext.prototype.blockInstructions = function() {
    return this.getTypedRuleContext(BlockInstructionsContext,0);
};
ForLoopInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.enterForLoopInstruction(this);
	}
};

ForLoopInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof gdbListener ) {
        listener.exitForLoopInstruction(this);
	}
};

ForLoopInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof gdbVisitor ) {
        return visitor.visitForLoopInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};



gdbParser.InstructionContext = InstructionContext;

gdbParser.prototype.instruction = function() {

    var localctx = new InstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, gdbParser.RULE_instruction);
    var _la = 0; // Token type
    try {
        this.state = 110;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            localctx = new AssignInstructionContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 81;
            this.match(gdbParser.ID);
            this.state = 82;
            this.match(gdbParser.ASSIGN);
            this.state = 83;
            this.expr();
            this.state = 84;
            this.match(gdbParser.T__5);
            break;
